realisation of testing Onliner.by

--- a/task2/src/main/resources/config.properties
+++ b/task2/src/main/resources/config.properties
@@ -1,7 +1,10 @@
 {
-    "Browser" : "firefox",
     "URL" : "https://www.onliner.by/",
+    "Browser" : "explorer",
     "login_onliner" : "malei-ka@mail.ru",
     "password_onliner" : "123456789",
-    "pageTimeout" : "10"
+    "pageTimeout" : "60",
+    "csvFilePath" : "src\\main\\resources\\file.csv"
+
+
 }
