some changes in project structure

--- a/task2/src/test/resources/config.properties
+++ b/task2/src/test/resources/config.properties
@@ -1,10 +1,8 @@
 {
     "URL" : "https://www.onliner.by/",
-    "Browser" : "explorer",
+    "Browser" : "chrome",
     "login_onliner" : "malei-ka@mail.ru",
     "password_onliner" : "123456789",
     "pageTimeout" : "60",
-    "csvFilePath" : "src\\main\\resources\\file.csv"
-
-
+    "csvFilePath" : "src\\test\\resources\\file.csv"
 }
